# containers

./: README.md
compose/ldap-demo/: docker-compose.yml
dockarity/tre-python/: Dockerfile  QUICK_START.md  README.md  list.txt  pyproject.toml
docker/hgi-apps-root/: Dockerfile  hgi.css
docker/imagenie/: Dockerfile  main.py
docker/mber/: Dockerfile
singularity/mber/: Singularity.def
singularity/stargazer/: Singularity.def  meta.yaml
singularity/tre-python3.13/: meta.yaml  singularity.def
