[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "altair==5.5.0",
    "asn1crypto>=1.5.1",
    "attrs>=25.3.0",
    "autoflake>=2.3.1",
    "automat>=25.4.16",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.13.4",
    "bitarray>=3.5.0",
    "black>=25.1.0",
    "bleach>=6.2.0",
    "blinker>=1.9.0",
    "bokeh>=3.7.3",
    "brewer2mpl>=1.4.1",
    "bump2version>=1.0.1",
    "certifi>=2025.6.15",
    "cget>=0.2.0",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "cloudpathlib==0.19.0",
    "colorama>=0.4.6",
    "configobj>=5.0.9",
    "constantly>=23.10.4",
    "cryptography==2.8",
    "cx-oracle==7.3.0",
    "cycler>=0.12.1",
    "dask==2024.1.0",
    "datatable>=1.1.0",
    "datetime>=5.5",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "docutils>=0.19",
    "entrypoints>=0.4",
    "fastapi>=0.115.14",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "flask>=3.1.1",
    "flask-compress>=1.17",
    "google-cloud-storage>=3.2.0",
    "gunicorn>=23.0.0",
    "h5py>=3.14.0",
    "hail>=0.2",
    "httplib2>=0.22.0",
    "hyperlink>=21.0.0",
    "idna>=3.10",
    "incremental>=24.7.2",
    "ipykernel>=6.29.5",
    "ipython>=8.37.0",
    "ipython-genutils>=0.2.0",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema==3.2.0",
    "jupyter>=1.1.1",
    "jupyter-client>=7.4.9",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.8.1",
    "jupytext>=1.17.2",
    "keras>=3.10.0",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "kiwisolver>=1.4.8",
    "ldpred>=1.0.11",
    "ldsc>=2.0.1",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.0",
    "matplotlib-venn>=1.1.2",
    "mistune>=3.1.3",
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "myst-nb>=1.2.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "netifaces>=0.11.0",
    "nimfa>=1.4.0",
    "nltk>=3.9.1",
    "notebook>=6.5.7",
    "numpy>=2.1.3",
    "oauthlib>=3.3.1",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "pandocfilters>=1.5.1",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pillow>=11.3.0",
    "pip-tools>=7.4.1",
    "plinkio>=0.9.8",
    "polars==1.25.2",
    "popcorn",
    "prometheus-client>=0.22.1",
    "prompt-toolkit>=3.0.51",
    "ptyprocess>=0.7.0",
    "pyaml>=25.5.0",
    "pyarrow>=20.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycaret>=2.2.2",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.7",
    "pydeseq2>=0.5.2",
    "pygments==2.4.1",
    "pyjwt>=2.10.1",
    "pyodbc>=5.2.0",
    "pyopenssl>=19.1.0",
    "pyparsing>=3.2.3",
    "pyrsistent==0.16.0",
    "pysam>=0.23.3",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cases>=3.9.1",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
    "pytest-httpx>=0.35.0",
    "python-dateutil>=2.9.0.post0",
    "python-debian>=1.0.1",
    "pytz>=2025.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyxdg>=0.28",
    "pyzmq>=27.0.0",
    "qmplot>=0.3.3",
    "qtconsole>=5.6.1",
    "requests>=2.32.4",
    "requests-unixsocket>=0.4.1",
    "rpy2>=3.6.1",
    "sas7bdat>=2.2.3",
    "scanpy==1.9.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "secretstorage>=3.3.3",
    "send2trash>=1.8.3",
    "service-identity>=24.2.0",
    "setuptools>=80.9.0",
    "shap>=0.48.0",
    "singledispatch>=4.1.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "tabpfn>=2.0.9",
    "tensorflow>=2.19.0",
    "terminado>=0.18.1",
    "testpath>=0.6.0",
    "theano>=1.0.5",
    "tornado>=6.5.1",
    "tox>=4.27.0",
    "traitlets>=5.14.3",
    "tretools",
    "twisted>=25.5.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250529",
    "tzdata==2023.3",
    "urllib3>=2.5.0",
    "uvloop>=0.21.0",
    "vaex>=4.17.0",
    "vcfpy>=0.13.8",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "virtualenv>=20.31.2",
    "visidata==0.98.1",
    "visions>=0.8.1",
    "vl-convert-python>=1.8.0",
    "wcwidth>=0.2.13",
    "webencodings>=0.5.1",
    "widgetsnbextension>=4.0.14",
    "xgboost>=3.0.2",
    "xlsxwriter>=3.2.5",
    "ydata-profiling>=4.16.1",
    "yhaplo",
    "zope-interface>=7.2",
]

[tool.uv.sources]
tretools = { git = "https://github.com/genes-and-health/tre-tools.git", rev = "v0.2.0-release" }
popcorn = { git = "https://github.com/brielin/Popcorn.git" }
yhaplo = { git = "https://github.com/23andMe/yhaplo.git", rev = "2.1.13" }